ola-parser/src/testdata/syntaxTests/errors/error_as_function_param.sol
error E(u256);
fn f(E x) pure -> (u256) {}
// ----
// TypeError 5172: (26-27): Name has to refer to a struct, enum or contract.
